Task #31: edit security config for profiles