@@ -4,6 +4,7 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.context.annotation.Profile;
 import org.springframework.security.authentication.AuthenticationProvider;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
@@ -16,9 +17,6 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import src.main.security.JwtAuthenticationFilter;
-import org.springframework.beans.factory.annotation.Value;
-import org.springframework.core.env.Environment;
-import org.springframework.context.annotation.Profile;
 
 import java.util.Arrays;
 import java.util.List;
@@ -26,54 +24,17 @@ import java.util.List;
 @Configuration
 @EnableWebSecurity
 @EnableMethodSecurity
-@Profile("!prod")
+@Profile("prod")
 @RequiredArgsConstructor
 @Slf4j
-public class SecurityConfig {
+public class ProdSecurityConfig {
 
     private final JwtAuthenticationFilter jwtAuthFilter;
     private final AuthenticationProvider authenticationProvider;
-    private final Environment env;
-
-    @Value("${springdoc.api-docs.path}")
-    private String restApiDocPath;
-
-    @Value("${springdoc.swagger-ui.path}")
-    private String swaggerPath;
 
     @Bean
-    public SecurityFilterChain devSecurityFilterChain(HttpSecurity http) throws Exception {
-        log.debug("Configuring SecurityFilterChain for 'dev' profile");
-        try {
-            http
-                    .csrf(AbstractHttpConfigurer::disable)
-                    .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-                    .authorizeHttpRequests(auth -> auth
-                            .requestMatchers(
-                                    "/auth/**",
-                                    "/swagger-ui/**",
-                                    "/v3/api-docs/**",
-                                    "/swagger-ui.html",
-                                    "/webjars/**"
-                            ).permitAll()
-                            .anyRequest().authenticated()
-                    )
-                    .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
-                    .authenticationProvider(authenticationProvider)
-                    .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
-            
-            log.debug("SecurityFilterChain for 'dev' profile configured successfully");
-            return http.build();
-        } catch (Exception e) {
-            log.error("Error configuring SecurityFilterChain for 'dev' profile: {}", e.getMessage(), e);
-            throw e;
-        }
-    }
-
-    @Bean
-    @Profile("prod")
-    public SecurityFilterChain prodSecurityFilterChain(HttpSecurity http) throws Exception {
-        log.debug("Configuring SecurityFilterChain for 'prod' profile");
+    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
+        log.debug("Конфигурирование SecurityFilterChain для профиля 'prod'");
         try {
             http
                     .csrf(AbstractHttpConfigurer::disable)
@@ -86,23 +47,19 @@ public class SecurityConfig {
                     .authenticationProvider(authenticationProvider)
                     .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
             
-            log.debug("SecurityFilterChain for 'prod' profile configured successfully");
+            log.debug("SecurityFilterChain для профиля 'prod' успешно сконфигурирован");
             return http.build();
         } catch (Exception e) {
-            log.error("Error configuring SecurityFilterChain for 'prod' profile: {}", e.getMessage(), e);
+            log.error("Ошибка при конфигурировании SecurityFilterChain для профиля 'prod': {}", e.getMessage(), e);
             throw e;
         }
     }
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-        log.debug("Configuring CORS");
+        log.debug("Конфигурирование CORS для prod-профиля");
         CorsConfiguration configuration = new CorsConfiguration();
-        if (Arrays.asList(env.getActiveProfiles()).contains("dev")) {
-            configuration.setAllowedOrigins(List.of("http://localhost:8080"));
-        } else {
-            configuration.setAllowedOrigins(List.of("https://moneyguard.asuscomm.com"));
-        }
+        configuration.setAllowedOrigins(List.of("https://moneyguard.asuscomm.com"));
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
         configuration.setAllowedHeaders(Arrays.asList("Authorization", "Cache-Control", "Content-Type", "X-Requested-With"));
         configuration.setExposedHeaders(List.of("Authorization"));
@@ -111,7 +68,7 @@ public class SecurityConfig {
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         
-        log.debug("CORS configured successfully");
+        log.debug("CORS для prod-профиля успешно сконфигурирован");
         return source;
     }
 } 
